[maven-release-plugin] prepare release 1.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>fr.monbanquet</groupId>
     <artifactId>sylph</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>Sylph</name>
@@ -15,7 +15,7 @@
         <url>https://github.com/monbanquet/Sylph.git</url>
         <connection>scm:git:git@github.com:monbanquet/Sylph.git</connection>
         <developerConnection>scm:git:git@github.com:monbanquet/Sylph.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.1.0</tag>
     </scm>
 
     <distributionManagement>
